public interface FeeStrategy{
   double calculateFee(int daysLate);
}