public class Student extends User{
   public Student(String name) {
       super(name, new StudentFee());
   }
}