' Generated by UML Generator
' Encoded: bLJ1Rjim3BtxAtHqvhZOsIYAPXqA16XtM3hiCEn0ouehn9O2YSxWTTstZvHZLquoOBiO4lNuoFSa-jOZEEpQ9l4xRVRWe1Mo0UzNY4wN7Qgrj6QZVohnFddMbH9IEzce90aeiS6kKWRlbH8lYH2PX4Ps3Q2YI5f1xnzeNGXjS568odObfRuc2UsLsu9KWd0RT0Ig-y3m-nyPXl8FkdJW-Zj0Q6mT2F8NaeHQlb8AhOoav3cCGTeSg6th-a8ymlwQMj2cNeeFrkvk-3pdppmjNR30YRrMk3uMI1SNIcG4OBgqfC_wOo666WJbA4k0qfDoYOFXuejNRb1We5KZdlVRDu-AsB2nqOnJqpXhAVwMipYszedGtFTK9JCMzRRdvbO7q0sGqQ7t9usDYje_M5qnVk-iL3vSpsU5dJDdjnMGqrqnyw0FOqOEm5ZmpkwryY6Vup-0aDeZs-lnccLEjvC5SsTKIt69A2YMpqhkR8TfHnn5y3gI0bNrPByUYrs6k21nZQfDeoWP6UoPEqdHrRmHFcTDancFeCqmCTE3QYcKWglzIFNj-vc7zq2pWVt_ZjjiLeVCusRsQXPdXGRiSNEEZQR_wkhNpUnjdepckpm_dP4JX2L468qm28oFwSBhOGYV9f4FPuL7cNbE1p4wYjmgKz5Fxmy
' URL: http://www.plantuml.com/plantuml/uml/bLJ1Rjim3BtxAtHqvhZOsIYAPXqA16XtM3hiCEn0ouehn9O2YSxWTTstZvHZLquoOBiO4lNuoFSa-jOZEEpQ9l4xRVRWe1Mo0UzNY4wN7Qgrj6QZVohnFddMbH9IEzce90aeiS6kKWRlbH8lYH2PX4Ps3Q2YI5f1xnzeNGXjS568odObfRuc2UsLsu9KWd0RT0Ig-y3m-nyPXl8FkdJW-Zj0Q6mT2F8NaeHQlb8AhOoav3cCGTeSg6th-a8ymlwQMj2cNeeFrkvk-3pdppmjNR30YRrMk3uMI1SNIcG4OBgqfC_wOo666WJbA4k0qfDoYOFXuejNRb1We5KZdlVRDu-AsB2nqOnJqpXhAVwMipYszedGtFTK9JCMzRRdvbO7q0sGqQ7t9usDYje_M5qnVk-iL3vSpsU5dJDdjnMGqrqnyw0FOqOEm5ZmpkwryY6Vup-0aDeZs-lnccLEjvC5SsTKIt69A2YMpqhkR8TfHnn5y3gI0bNrPByUYrs6k21nZQfDeoWP6UoPEqdHrRmHFcTDancFeCqmCTE3QYcKWglzIFNj-vc7zq2pWVt_ZjjiLeVCusRsQXPdXGRiSNEEZQR_wkhNpUnjdepckpm_dP4JX2L468qm28oFwSBhOGYV9f4FPuL7cNbE1p4wYjmgKz5Fxmy
' Generated on: 2026-04-22T17:22:02.296682

@startuml
skinparam classAttributeIconSize 0
hide circle

class StudentFee {
  +calculateFee(daysLate: int): double
}

interface FeeStrategy {
  ~calculateFee(daysLate: int): double
}

class LibraryCatalog {
  -{static} instance: LibraryCatalog
  -inventory: Map<String, Book>
  --
  -LibraryCatalog()
  +{static} getInstance(): LibraryCatalog
  +getBook(bookID: String): Book
}

abstract class User {
  -name: String
  -feeStrategy: FeeStrategy
  --
  +User(name: String, feeStrategy: FeeStrategy)
  +getName(): String
  +notifyBookAvailable(bookTitle: String): void
  +processLateReturn(daysLate: int): void
}

class Book {
  -title: String
  -availableCopies: int
  -waitlist: List<User>
  --
  +Book(title: String, availableCopies: int)
  +checkout(user: User): void
  +addToWaitlist(user: User): void
  +returnItem(): void
  +getTitle(): String
  +getAvailableCopies(): int
}

class Main {
  +{static} main(args: String[]): void
}

class FacultyFee {
  +calculateFee(daysLate: int): double
}

class Student {
  +Student(name: String)
}

class Faculty {
  +Faculty(name: String)
}

StudentFee ..|> FeeStrategy
LibraryCatalog *-- LibraryCatalog
LibraryCatalog o-- Book
User *-- FeeStrategy
Book o-- User
FacultyFee ..|> FeeStrategy
Student --|> User
Faculty --|> User
@enduml